--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goit-react-hw-05-movies",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://OstafiichukO.github.io/goit-react-hw-05-movies",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "gh-pages": "^3.2.3",
     "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
