--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "axios": "^0.26.0",
     "gh-pages": "^3.2.3",
     "history": "^5.3.0",
+    "lint-staged": "^12.3.5",
+    "modern-normalize": "^1.1.0",
+    "netlify": "^11.0.0",
+    "prettier": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
