--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-js-loader": "^0.1.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "vanilla-back-to-top": "^7.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
