--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goit-react-hw-05-movies",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -9,7 +9,6 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
-    "gh-pages": "^3.2.3",
     "history": "^5.3.0",
     "lint-staged": "^12.3.5",
     "modern-normalize": "^1.1.0",
@@ -29,12 +28,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "netlify deploy -p"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
