--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goit-react-hw-05-movies",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
