--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "gh-pages": "^3.2.3",
     "history": "^5.3.0",
     "lint-staged": "^12.3.5",
     "modern-normalize": "^1.1.0",
@@ -28,12 +29,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "netlify deploy -p"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
